// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-accordion> Component basic usage 1`] = `

<bolt-accordion>
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-1280744884"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
                             id="c-bolt-accordion-item-inner-1280744884"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
                   for="c-bolt-accordion-item-1280744884"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 1
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-1280744884"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-1280744884"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-547890582"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator"
                             id="c-bolt-accordion-item-inner-547890582"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
                   for="c-bolt-accordion-item-547890582"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 2
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-547890582"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-547890582"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-747879478"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
                             id="c-bolt-accordion-item-inner-747879478"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
                   for="c-bolt-accordion-item-747879478"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 3
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-747879478"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-747879478"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>

`;

exports[`<bolt-accordion> Component expand multiple items: false 1`] = `

<bolt-accordion>
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-338977785"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
                             id="c-bolt-accordion-item-inner-338977785"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
                   for="c-bolt-accordion-item-338977785"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 1
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-338977785"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-338977785"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-1601780305"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator"
                             id="c-bolt-accordion-item-inner-1601780305"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
                   for="c-bolt-accordion-item-1601780305"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 2
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-1601780305"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-1601780305"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-92530194"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
                             id="c-bolt-accordion-item-inner-92530194"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
                   for="c-bolt-accordion-item-92530194"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 3
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-92530194"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-92530194"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>

`;

exports[`<bolt-accordion> Component expand multiple items: true 1`] = `

<bolt-accordion multiple>
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-1758245961"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
                             id="c-bolt-accordion-item-inner-1758245961"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
                   for="c-bolt-accordion-item-1758245961"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 1
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-1758245961"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-1758245961"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-1313606973"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator"
                             id="c-bolt-accordion-item-inner-1313606973"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
                   for="c-bolt-accordion-item-1313606973"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 2
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-1313606973"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-1313606973"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-1088355797"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
                             id="c-bolt-accordion-item-inner-1088355797"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
                   for="c-bolt-accordion-item-1088355797"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 3
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-1088355797"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-1088355797"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>

`;

exports[`<bolt-accordion> Component spacing: large 1`] = `

<bolt-accordion spacing="large">
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-1641082683"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
                             id="c-bolt-accordion-item-inner-1641082683"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--large"
                   for="c-bolt-accordion-item-1641082683"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 1
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-1641082683"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--large"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-1641082683"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--large"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--large">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-349668002"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator"
                             id="c-bolt-accordion-item-inner-349668002"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--large"
                   for="c-bolt-accordion-item-349668002"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 2
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-349668002"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--large"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-349668002"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--large"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--large">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-1119087943"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
                             id="c-bolt-accordion-item-inner-1119087943"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--large"
                   for="c-bolt-accordion-item-1119087943"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 3
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-1119087943"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--large"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-1119087943"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--large"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--large">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>

`;

exports[`<bolt-accordion> Component spacing: medium 1`] = `

<bolt-accordion spacing="medium">
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-973413237"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
                             id="c-bolt-accordion-item-inner-973413237"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
                   for="c-bolt-accordion-item-973413237"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 1
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-973413237"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-973413237"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-2075217842"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator"
                             id="c-bolt-accordion-item-inner-2075217842"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
                   for="c-bolt-accordion-item-2075217842"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 2
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-2075217842"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-2075217842"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-1614416388"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
                             id="c-bolt-accordion-item-inner-1614416388"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
                   for="c-bolt-accordion-item-1614416388"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 3
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-1614416388"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-1614416388"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>

`;

exports[`<bolt-accordion> Component spacing: none 1`] = `

<bolt-accordion spacing="none">
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-1852242620"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
                             id="c-bolt-accordion-item-inner-1852242620"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--none"
                   for="c-bolt-accordion-item-1852242620"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 1
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-1852242620"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--none"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-1852242620"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--none"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--none">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-920801148"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator"
                             id="c-bolt-accordion-item-inner-920801148"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--none"
                   for="c-bolt-accordion-item-920801148"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 2
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-920801148"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--none"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-920801148"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--none"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--none">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-2096898107"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
                             id="c-bolt-accordion-item-inner-2096898107"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--none"
                   for="c-bolt-accordion-item-2096898107"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 3
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-2096898107"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--none"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-2096898107"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--none"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--none">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>

`;

exports[`<bolt-accordion> Component spacing: small 1`] = `

<bolt-accordion spacing="small">
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-2144614686"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
                             id="c-bolt-accordion-item-inner-2144614686"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--small"
                   for="c-bolt-accordion-item-2144614686"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 1
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-2144614686"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--small"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-2144614686"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--small"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--small">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-1532503070"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator"
                             id="c-bolt-accordion-item-inner-1532503070"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--small"
                   for="c-bolt-accordion-item-1532503070"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 2
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-1532503070"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--small"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-1532503070"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--small"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--small">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-1818982526"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
                             id="c-bolt-accordion-item-inner-1818982526"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--small"
                   for="c-bolt-accordion-item-1818982526"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 3
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-1818982526"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--small"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-1818982526"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--small"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--small">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>

`;

exports[`<bolt-accordion> Component spacing: xsmall 1`] = `

<bolt-accordion spacing="xsmall">
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-278539800"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
                             id="c-bolt-accordion-item-inner-278539800"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--xsmall"
                   for="c-bolt-accordion-item-278539800"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 1
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-278539800"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--xsmall"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-278539800"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--xsmall"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--xsmall">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-1988529377"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator"
                             id="c-bolt-accordion-item-inner-1988529377"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--xsmall"
                   for="c-bolt-accordion-item-1988529377"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 2
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-1988529377"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--xsmall"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-1988529377"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--xsmall"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--xsmall">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-1417457975"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
                             id="c-bolt-accordion-item-inner-1417457975"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--xsmall"
                   for="c-bolt-accordion-item-1417457975"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 3
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-1417457975"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--xsmall"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-1417457975"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--xsmall"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--xsmall">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>

`;
